<resources>
    <string name="app_name">smartHomecare-App</string>
    <string name="e_mail">example@mail.com</string>
    <string name="password">Password</string>
    <string name="apptitle">smartHomecare</string>
    <string name="sign_in">Sign in</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="contentLogof1">smartHomecare Logo in #f1f1f1</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_beacon">BeaconActivity</string>

    <!--Button names-->
    <string name="startButton">Start</string>
    <string name="stopButton">Stop</string>
    <string name="markButton">Mark</string>
    <string name="exportButton">Export Data</string>
    <string name="clearButton">Clear</string>

    <!-- Toast messages on pressing the buttons-->
    <string name="startToast">Packet sniffing has started</string>
    <string name="stopToast">Packet sniffing has stopped</string>
    <string name="markToast">Marking!</string>
    <string name="exportToast">Exporting Data</string>
    <string name="clearToast">Data has been cleared</string>

    <!-- Prompts -->
    <string name="success">Successful</string>
    <string name="filePrompt">Enter Filename:</string>
    <string name="noBluetooth">Bluetooth not enabled</string>
    <string name="noBluetoothMessage">Please enable bluetooth in settings and restart this application.</string>
    <string name="noBLE">Bluetooth LE not available</string>
    <string name="noBLEMessage">Sorry, this device does not support Bluetooth LE.</string>

    <!-- Error messages-->
    <string name="startBeforeStop">Press Stop before starting again</string>
    <string name="stopBeforeStart">Press Start to Sniff packets</string>
    <string name="markingError">Press Start before setting Markers</string>
    <string name="noData">Error: No Data has been collected!</string>
    <string name="DataCollectionInterrupt">Error: Data collection is taking place!</string>
    <string name="noFilename">Please give a suitable file name!</string>
    <string name="existingFile">Error: File already exists!</string>
    <string name="noDirectory">Unsuccessful</string>
    <string name="filename">Filename</string>
</resources>
