<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.identos.smarthomecare_app.BeaconActivity">
    <!--android:paddingBottom="16dp"-->
    <!--android:paddingLeft="16dp"-->
    <!--android:paddingRight="16dp"-->
    <!--android:paddingTop="16dp"-->

    <Button
        android:id="@+id/markButton"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:text="@string/markButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filename" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/markButton"
        android:layout_alignTop="@+id/startButton"
        android:text="@string/clearButton"
        app:layout_constraintBottom_toBottomOf="@+id/markButton"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/markButton"
        app:layout_constraintTop_toTopOf="@+id/markButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exportButton"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/filePrompt"
        android:text="@string/startButton"
        app:layout_constraintBottom_toBottomOf="@+id/stopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stopButton"
        app:layout_constraintTop_toTopOf="@+id/stopButton" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_toEndOf="@+id/filePrompt"
        android:text="@string/stopButton"
        app:layout_constraintBottom_toBottomOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/startButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toTopOf="@+id/clearButton" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:layout_above="@+id/markButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/exportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:fillViewport="true"
            android:maxLines="20"
            android:scrollbars="vertical"
            android:text="">

            <LinearLayout
                android:id="@+id/linScrollLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/timeStamp"
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="bottom"
                    android:text="" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom"
                    android:text="" />

                <TextView
                    android:id="@+id/rssi"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="bottom"
                    android:text="" />

                <TextView
                    android:id="@+id/mark"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/exportButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/filename"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/filePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/filePrompt"
        app:layout_constraintEnd_toEndOf="@+id/filename"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/filename"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/filename"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filePrompt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/filename"
        app:layout_constraintEnd_toStartOf="@+id/exportButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filePrompt" />

</android.support.constraint.ConstraintLayout>